<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:cardCornerRadius="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="350dp"
            android:layout_height="200dp"
            android:background="@color/white">

            <TextView
                android:id="@+id/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/log_out_text"
                android:layout_marginHorizontal="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:gravity="center"
                app:layout_constraintVertical_bias="0.2"/>

            <Button
                android:id="@+id/btn_decline"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btn_accept"
                android:backgroundTint="@color/unsubsrive_color"
                android:text="@string/no"
                android:textColor="@color/black"/>

            <Button
                android:id="@+id/btn_accept"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btn_decline"
                android:backgroundTint="@color/background_color"
                android:text="@string/yes"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</layout>