<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color_feed"
        android:animateLayoutChanges="true"
        tools:context=".ui.FeedFragment">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_view"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/search_background"
            android:hint="@string/search"
            android:imeOptions="actionSearch"
            android:inputType="text"
            app:iconifiedByDefault="false"
            app:layout_constraintTop_toTopOf="parent">

        </androidx.appcompat.widget.SearchView>

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/search_view">

            <RadioButton
                android:id="@+id/btn_new"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center"
                android:checked="true"
                android:text="@string/new_posts"
                android:textStyle="bold"
                android:textSize="17sp"
                android:textColor="@drawable/checked_button_font_color"/>

            <RadioButton
                android:id="@+id/btn_popular"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/popular"
                android:textSize="17sp"
                android:textColor="@drawable/checked_button_font_color"/>

        </RadioGroup>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_feed"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp"
            android:descendantFocusability="blocksDescendants"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radio_group"
            tools:listitem="@layout/item_subreddit_feed" />

        <FrameLayout
            android:id="@+id/fl_progress"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/radio_group"
            android:background="#40000000"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent">

            <ProgressBar
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:indeterminateTint="@color/background_color" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/fl_error"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/radio_group"
            android:background="#40000000"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/tv_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:text="@string/something_went_wrong"
                android:textAlignment="center"
                android:layout_marginHorizontal="10dp"
                />

        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>