<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        tools:context=".ui.OnBoardActivity">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_onboard"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="35dp"
            android:layout_marginStart="15dp"/>

        <TextView
            android:id="@+id/skip_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skip"
            app:layout_constraintTop_toTopOf="@id/logo"
            app:layout_constraintBottom_toBottomOf="@id/logo"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="16sp"
            android:textColor="@color/background_color"
            android:layout_marginEnd="40dp"/>

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:animateLayoutChanges="true"
            android:layout_height="200dp"
            android:src="@drawable/onboard_one"
            app:layout_constraintTop_toBottomOf="@id/logo"
            android:layout_marginTop="50dp"/>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textStyle="bold"
            android:text="@string/welcome_to_humblr"
            app:layout_constraintTop_toBottomOf="@id/image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="50dp"/>

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:textSize="18sp"
            android:textAlignment="center"
            android:text="@string/onboard_one"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"/>

        <ImageView
            android:id="@+id/progress"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="90dp"
            android:src="@drawable/onboard_progress_one"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>